# libCommon

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  libtool
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
Common/: .gitignore  ArgEnvBool.c  ArgEnvDouble.c  ArgEnvFlag.c  ArgEnvInt.c  ArgEnvLong.c  ArgEnvString.c  AsciiToEbcdic.c  Avl.c  Avl.h  AvlLocking.c  CanExecute.c  CenterLine.c  Common.h  CommonConfig.h  CommonErrorString.c  CommonGetVersion.c  CommonVersion.h  DateStringFromTimeT.c  DateStringFromTm.c  DateStringToTimeT.c  DateTime.h  DateTimeData.c  EbcdicToAscii.c  Error.c  ErrorArgs.c  ErrorMesg.c  ErrorTypeString.c  FileModeString.c  FindPath.c  ForeachFile.c  GetErrorHandler.c  GnuRegex.c  GnuRegex.h  HHMMSStoTimeT.c  InitLocking.c  IsLeapYear.c  LogLevelFromString.c  LogLevelSetString.c  LogLevelString.c  (+47 more)
doc/: 00-ReleaseNotes.txt  00-Todo.txt  Makefile  need.man.mages.for.these
doc/devel/: Dependencies.txt
doc/man/: ArgEnvBool.3  ArgEnvDouble.3  ArgEnvFlag.3  ArgEnvFlag.3Common  ArgEnvInt.3  ArgEnvLong.3  ArgEnvString.3  AvlAdd.3  AvlAdd.3Common  AvlAttach.3  AvlAttach.3Common  AvlCount.3  AvlCount.3Common  AvlDel.3  AvlDelMax.3  AvlDelMin.3  AvlDispose.3  AvlFind.3  AvlFind.3Common  AvlFindMax.3  AvlFindMin.3  AvlGetRoot.3  AvlInit.3  AvlWalk.3  Bit.3  CHAR_TO_INT.3  CanExecute.3  CenterLine.3  CharToInt.3  Common.3  Common.3Common  CommonErrorString.3  CommonErrorString.3Common  CommonGetVersion.3  CommonGetVersion.3Common  DWORD_ALIGN.3  DWORD_ALIGN.3Common  DateStringFromTimeT.3  DateStringFromTm.3  DateStringToTimeT.3  (+102 more)
man3/: A2E.3Common  ArgEnvBool.3Common  ArgEnvDouble.3Common  ArgEnvFlag.3Common  ArgEnvInt.3Common  ArgEnvLong.3Common  ArgEnvString.3Common  AsciiToEbcdic.3Common  AvlAdd.3Common  AvlAttach.3Common  AvlCount.3Common  AvlDel.3Common  AvlDelMax.3Common  AvlDelMin.3Common  AvlDispose.3Common  AvlFind.3Common  AvlFindMax.3Common  AvlFindMin.3Common  AvlGetRoot.3Common  AvlInit.3Common  AvlWalk.3Common  Bit.3Common  CHAR_TO_INT.3Common  CanExecute.3Common  CenterLine.3Common  CharToInt.3Common  Common.3Common  CommonErrorString.3Common  CommonGetVersion.3Common  DWORD_ALIGN.3Common  DateStringFromTimeT.3Common  DateStringFromTm.3Common  DateStringToTimeT.3Common  Difftm.3Common  E2A.3Common  ERROR.3Common  ERROR_APP.3Common  EbcdicToAscii.3Common  Error.3Common  ErrorArgs.3Common  (+70 more)
src/: .cvsignore  Makefile
src/Common/: .cvsignore  ArgEnvBool.c  ArgEnvDouble.c  ArgEnvFlag.c  ArgEnvInt.c  ArgEnvLong.c  ArgEnvString.c  Avl.c  Avl.h  Bit.h  CanExecute.c  CenterLine.c  Common.h  CommonErrorString.c  CommonGetVersion.c  CommonVersion.h  Common_Build.mms  DateStringFromTimeT.c  DateStringFromTm.c  DateStringToTimeT.c  DateTime.h  DateTimeData.c  Difftm.c  EbcdicToAscii.c  Error.1.c  Error.c  ErrorArgs.c  ErrorMesg.c  ErrorString.c  ErrorTypeString.c  FindPath.c  GetErrorHandler.c  GnuRegex.c  GnuRegex.h  HHMMSStoTimeT.c  IsLeapYear.c  LibError.c  LogLevelFromString.c  LogLevelSetString.c  LogLevelString.c  (+46 more)
src/arch/AIX32/: CommonConfig.h  Makefile.Common  Makefile.common  _GnuRegexCfg.h  _Stat.h
src/arch/AIX41/: CommonConfig.h  Makefile.Common  _Stat.h
src/arch/Borland/: Makefile  canexec.c  cmmncfg.h  common.ide  fmdstr.c  freafile.c
src/arch/Hpux10/: CommonConfig.h  Makefile.Common  _Stat.h
src/arch/Linux/: CommonConfig.h  Makefile.Common  Makefile.common  TestConfig.h  _Stat.h
src/arch/Sun5/: CommonConfig.h  Makefile.Common  TestConfig.h  _Stat.h
src/arch/src/: AvlLocking.c  CanExecute.c  CommonConfig.h  FileModeString.c  ForeachFile.c  InitLocking.c  Makefile.Common  MemberOfGroup.c  basename.c  strdup.c  strlwr.c  strptime.c  strupr.c
src/config/: 00-Makefile.cfg  Setup.cfg.src
src/missing/: AsciiToEbcdic.c  CenterLine.c  Difftm.c  Error.1.c  ErrorTypeString.c  FindPath.c  LogLevelSetString.c  LoggerGetFunct.c  LoggerLevel.c  Makefile.am  Makefile.in  StringToShort.c  StringToUInt.c  YYMMDDtoTimeT.c  YearMonthDayToTimeT.c  datetime.h  error.h  missing.h  strptime.c
support/: AnonFtp.ksh  Setup.Makefile  mkdirhier.sh
test/: .cvsignore  Makefile
test/Base/src/: .cvsignore  Makefile  TestFunctProto.h  main.c  tDateStringFromTimeT.c  tDateStringFromTm.c  tDateStringToTimeT.c  tHHMMSStoTimeT.c  tHourMinSecToTimeT.c  tIsLeapYear.c  tYYMMDDtoTimeT.c  tYYYYMMDDtoTimeT.c  tYearMonthDayToTimeT.c  tstrptime.c
test/old/: AvlTestLargeValues.c  AvlTestSmallValues.c  CompareNodes.c  DateTimeTest.c  DeleteError.c  Makefile  StringTest.c  avl_test.c  main.c  tCommonError.c  tLOGIT.c
tests/: .cvsignore  Makefile
tests/old/: AvlTestLargeValues.c  AvlTestSmallValues.c  CompareNodes.c  DateTimeTest.c  DeleteError.c  Makefile  README  StringTest.c  TestOutput.c  key_gen.c  main.c  tCommonError.c  tLOGIT.c  tTempFileName.c  testvals.h.small  testvals.large
tests/unit/: .cvsignore  .gitignore  Makefile.am  Makefile.in  main.c  proto.h  tCanExecute.c  tCenterLine.c  tCommon.c  tDateStringFromTimeT.c  tDateStringFromTm.c  tDateStringToTimeT.c  tFindPath.c  tHHMMSStoTimeT.c  tHourMinSecToTimeT.c  tIsLeapYear.c  tMemberOfGroup.c  tStringTo.c  tStripChars.c  tYYMMDDtoTimeT.c  tYYYYMMDDtoTimeT.c  tYearMonthDayToTimeT.c  tmissing.c  tstrptime.c
