dnl configure.ac - 2017-04-19
dnl
dnl (cc) <paul4hough@gmail.com>

AC_PREREQ(2.68)
AC_INIT( [missing],[1.0],[Paul Houghton <paul4hough@gmail.com>])
AC_CONFIG_MACRO_DIRS([m4])
AM_INIT_AUTOMAKE
LT_INIT

AC_PROG_CC
dnl AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile src/missing/Makefile tests/unit/Makefile])
AC_OUTPUT
