dnl configure.ac - 2017-04-19
dnl
dnl (cc) <paul4hough@gmail.com>

AC_PREREQ(2.69)
AC_INIT( [Common],[1.3.1],[Paul Houghton <paul4hough@gmail.com>])
AC_CONFIG_MACRO_DIRS([m4])
AM_INIT_AUTOMAKE
LT_INIT

AC_PROG_SED
AC_PROG_CC
AC_CONFIG_HEADERS([Common/aconfig.h])

AC_CONFIG_FILES([
  Makefile
  man3/Makefile
  Common/Makefile
  tests/unit/Makefile
  ])

AC_OUTPUT
